Fix grid alignment on main page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,6 @@
 .header-container {
-  grid-column-start: 1;
-  grid-column-end: 5;
+  grid-column-start: 2;
+  grid-column-end: 6;
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
