--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,8 +1,11 @@
 .nav-bar-container {
-  grid-column-start: 0;
-  grid-column-end: 1;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
 }
 
 .profile-pic {
-  height: 100px;
+  border-radius: 50%;
+  height: 200px;
 }
