--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,11 +1,7 @@
-body {
+.App {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-}
-
-.App {
-  grid-column-start: 0;
-  grid-column-end: 5;
+  grid-template-rows: repeat(2, 1fr);
   text-align: center;
 }
 
